mostly fixed tests in build
Change-Id: If15dd8856ba280dbf0422638bbd7471bd1b5d17b